--- a/js/components/navbar/navbar.html
+++ b/js/components/navbar/navbar.html
@@ -1,3 +1,4 @@
+<md-nav-bar>
 <header >
  <nav class="navbar navbar-default navbar-fixed-top">
    <div class="container">
@@ -7,3 +8,4 @@
    </div>
  </nav>
 </header>
+</md-nav-bar>
