render wavesurfer, upload song to playlist

--- a/js/templates/songs.html
+++ b/js/templates/songs.html
@@ -1,4 +1,7 @@
 <div ng-controller="songsController as songs">
   <h1>Songs</h1>
   <pre>{{ songs.songList | json }}</pre>
+
+  <h4>Add a new Song</h4>
+  <song-upload></song-upload>
 </div>
