--- a/js/components/songUpload/songUpload.html
+++ b/js/components/songUpload/songUpload.html
@@ -1,5 +1,7 @@
 
-<input type="file">
+<input type="text" placeholder="Title" ng-model="$ctrl.song.title"><br>
+<input type="text" placeholder="Artist" ng-model="$ctrl.song.artist"><br>
+<input type="file" id="song-file-picker">
 <button ng-click="$ctrl.onFileInputChanged()">Upload</button>
 <p id="status">Please select a file</p>
 <pre>{{$ctrl.data | json}}</pre>
