--- a/js/templates/playlists.html
+++ b/js/templates/playlists.html
@@ -1,5 +1,6 @@
 <div ng-controller="playlistsController as playlists">
   <ul>
-    <li ng-repeat="playlist in playlists.playlists">{{ playlist.name}} <a ui-sref="playlist({ id : playlist._id})">View</a></li>
+    <li ng-repeat="playlist in playlists.playlists">{{ playlist.title}} - <small>{{playlist.description}}</small> <a ui-sref="playlist({ id : playlist._id})">View</a></li>
   </ul>
+  <playlist-form></playlist-form>
 </div>
