--- a/js/templates/signin.html
+++ b/js/templates/signin.html
@@ -52,10 +52,5 @@
         <a class="underline" ng-click="vm.toggleValue = !vm.toggleValue;"><u>Sign In</u></a>.
       </strong>
     </p>
-
-    <p>
-      If you can't remember your password,
-      <a class="underline"><u>request a new one</u>.</a>
-    </p>
-  </div> <!-- sign-up-form -->
+  </div> 
 </div>
