--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,26 @@ md-toolbar.md-toolbar-sm .md-toolbar-tools {
     max-height: 32px;
     padding: 6px;
     font-size: 16px;
+
+}
+
+md-toolbar {
+    text-align: center;
+}
+
+md-card {
+    max-width: 300px;
+    max-height: 600px;
+}
+
+
+.form-group {
+  text-align: center;
+}
+
+.md-headline {
+    text-align: center;
+    margin-top: 15px;
 }
 
 md-toolbar.md-toolbar-sm {
