--- a/js/templates/signin.html
+++ b/js/templates/signin.html
@@ -1,10 +1,13 @@
 <div ng-controller="SignInController as vm">
-  <div class="sign-in-form" ng-hide="vm.toggleValue">
-    <h1>Sign In</h1>
+
+<md-card>
+<div class="sign-in-form" ng-hide="vm.toggleValue">
+  <md-toolbar class="md-hue-2">
+    <span class="md-headline">Sign In</span>
+  </md-toolbar>
 
 
 <md-content md-theme="docs-dark" layout-gt-sm="row" layout-padding>
-
     <form ng-submit="vm.submitLogIn();" name="signInForm" novalidate>
 
       <div class="form-group">
@@ -22,8 +25,10 @@
       </md-input-container>
       </div>
 
-      <md-button class="primary" type="submit" ng-disabled="signInForm.$invalid" class="btn btn-default">Submit</md-button>
+      <md-button class="md-raised md-primary" type="submit" ng-disabled="signInForm.$invalid" class="btn btn-default">Submit</md-button>
     </form>
+</md-card>
+
 </md-content>
     <p>
       <strong>
@@ -33,11 +38,23 @@
     </p>
   </div> <!-- sign-in-form -->
 
+
+
+
+
+
+
+
+
+
+
   <div class="sign-up-form" ng-show="vm.toggleValue">
 
 
+    <md-toolbar class="md-hue-2">
+      <span class="md-headline">Sign Up</span>
+    </md-toolbar>
 
-    <h1>Sign Up</h1>
 
     <form ng-submit="vm.submitSignUp();">
       <div class="form-group">
@@ -67,10 +84,13 @@
         <label for="exampleInputPassword2">Password confirmation</label>
         <input ng-model="vm.signUp.passwordConfirmation" type="password" class="form-control" id="exampleInputPassword2">
       </div>
+      <md-button class="md-raised md-primary" type="submit" class="btn btn-default">Submit</md-button>
     </md-input-container>
-      <md-button class="primary" type="submit" class="btn btn-default">Submit</md-button>
+
     </form>
-  
+
+
+
     <p>
       <strong>
         If you are already a user,
