ngmaterial Add Song To PL form

--- a/js/components/playlistPlayer/playlistPlayer.html
+++ b/js/components/playlistPlayer/playlistPlayer.html
@@ -1,6 +1,10 @@
-<div class="wavesurfer-container"></div>
 
-<div></div>
+
+<md-card>
+<div class="wavesurfer-container"></div>
+</md-card>
+
+
 <div ng-show="$ctrl.currentSong">
 <div> {{$ctrl.progress}} </div>
 <div>{{$ctrl.currentSong.artist}} - {{$ctrl.currentSong.title}} - {{$ctrl.currentSong.duration}}</div>
