--- a/js/components/addSongToPlaylistForm/addSongToPlaylistForm.html
+++ b/js/components/addSongToPlaylistForm/addSongToPlaylistForm.html
@@ -1,4 +1,18 @@
-<p>Add Song To Playlist</p>
-<ul>
-  <li ng-repeat="song in $ctrl.songs" ng-click="$ctrl.addSongToPlaylist(song)"> {{song.title}} - {{song.artist}} </li>
-</ul>
+
+
+  <md-card>
+    <md-toolbar class="md-toolbar-sm">
+      <div class="text-center" class="md-toolbar-tools">
+        <h2 style="font-size: 24px;">Add Song To Playlist</h1>
+      </div>
+      </md-toolbar>
+
+
+<md-list layout="column">
+  <md-virtual-repeat-container style="height: 250px">
+  <md-list-item md-virtual-repeat="song in $ctrl.songs" ng-click="$ctrl.addSongToPlaylist(song)"> {{song.title}} - {{song.artist}}
+<md-divider></md-divider>
+</md-list-item>
+</md-virtual-repeat-container>
+</md-list>
+</md-card>
