--- a/js/templates/playlists.html
+++ b/js/templates/playlists.html
@@ -1,10 +1,22 @@
 <div ng-controller="playlistsController as playlists">
-  <ul>
-    <li ng-repeat="playlist in playlists.playlists">
+
+  <md-card>
+  <md-toolbar class="md-toolbar-sm">
+    <div class="text-center" class="md-toolbar-tools">
+      <h2 style="font-size: 24px;">Playlists</h1>
+    </div>
+  </md-toolbar>
+
+  <md-list layout="column">
+    <md-virtual-repeat-container style="height: 250px">
+    <md-list-item md-virtual-repeat="playlist in playlists.playlists">
       {{ playlist.title}} - <small>{{playlist.description}}</small>
       <a ui-sref="playlist({ id : playlist._id})">View</a>
       <button ng-click="playlists.deletePlaylist(playlist)">Delete</button>
-    </li>
-  </ul>
+      <md-divider></md-divider>
+    </md-list-item>
+    </md-virutal-repeat-container>
+  </md-list>
   <playlist-form></playlist-form>
+</md-card>
 </div>
