more ng-material

--- a/js/components/playlistPlayer/playlistPlayer.html
+++ b/js/components/playlistPlayer/playlistPlayer.html
@@ -37,6 +37,7 @@
 
 <ol>
   <li ng-repeat="track in $ctrl.similarTracks">
+    <img ng-src="{{track.image[1].#text}}"/> -
     {{track.artist.name}} - {{track.name}}
   </li>
 </ol>
