update player icons

--- a/js/components/navbar/navbar.html
+++ b/js/components/navbar/navbar.html
@@ -3,7 +3,7 @@
  <md-nav-bar class="navbar navbar-default navbar-fixed-top">
    <div class="container">
      <a ui-sref="welcome" class="navbar-brand">Mp3 Playground</a>
-       <md-button ng-hide="$ctrl.authService.isLoggedIn()" ui-sref="signin" type="button" class="btn btn-default navbar-btn navbar-right">Sign in</md-button>
+       <md-button class="md-raised md-primary" ng-hide="$ctrl.authService.isLoggedIn()" ui-sref="signin" id="signinButton">Sign in</md-button>
        <md-button ng-show="$ctrl.authService.isLoggedIn()" ng-click= "$ctrl.authService.logOut()" type="button" class="btn btn-default navbar-btn navbar-right">Sign out</md-button>
    </div>
  </md-nav-bar>
