--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,10 @@ md-card {
     max-height: 600px;
 }
 
+md-list .md-subheader {
+
+    text-align: center;
+}
 
 .form-group {
   text-align: center;
@@ -53,5 +57,5 @@ md-toolbar.md-toolbar-sm {
 
 
 #signinButton{
-  
+
 }
