--- a/js/components/playlistPlayer/playlistPlayer.html
+++ b/js/components/playlistPlayer/playlistPlayer.html
@@ -10,39 +10,74 @@
 <div>{{$ctrl.currentSong.artist}} - {{$ctrl.currentSong.title}} - {{$ctrl.currentSong.duration}}</div>
 </div>
 
+<md-toolbar>
+  <div class="md-toolbar-tools" layout="row">
+<md-button type="button" ng-click="$ctrl.prevSong()"><md-icon md-font-icon="zmdi zmdi-skip-previous"></md-icon></md-button>
 
-<button ng-click="$ctrl.prevSong()">Prev</button>
-<button ng-click="$ctrl.skipBackward()"><<</button>
-<button ng-click="$ctrl.playPause()">Play</button>
-<button ng-click="$ctrl.pause()">Pause</button>
-<button ng-click="$ctrl.toggleMute()">Mute</button>
+<md-button type="button" ng-click="$ctrl.skipBackward()"><md-icon md-font-icon="zmdi zmdi-fast-rewind"></md-icon></md-button>
+
+<md-button type="button" ng-click="$ctrl.playPause()"><md-icon md-font-icon="zmdi zmdi-play"></md-icon></md-button>
+
+<md-button type="button" ng-click="$ctrl.pause()"><md-icon md-font-icon="zmdi zmdi-pause"></md-icon></md-button>
+
 <md-button type="button" ng-click="$ctrl.skipForward()"> <md-icon md-font-icon="zmdi zmdi-fast-forward"></md-icon></md-button>
-<button ng-click="$ctrl.nextSong()">Next</button>
-<h4>songs!</h4>
+
+<md-button type="button" ng-click="$ctrl.nextSong()"><md-icon md-font-icon="zmdi zmdi-skip-next"></md-icon></md-button>
+
+<md-button type="button" ng-click="$ctrl.toggleMute()"><md-icon md-font-icon="zmdi zmdi-volume-off"></md-icon></md-button>
+</div>
+</md-toolbar>
+
+
+<h4>{{$ctrl.playlist}}</h4>
+
+
+
+<md-content layout="column">
+  <md-list class="table-fixed-width md-whiteframe-z1">
+    <md-list-item class="zb" flex>
+<md-subheader flex="25" ng-click="$ctrl.setOrderProperty('title')">Title</md-subheader>
+  <md-subheader flex="25" ng-click="$ctrl.setOrderProperty('artist')">Artist</md-subheader>
+  <md-subheader flex="25" ng-click="$ctrl.setOrderProperty('duration')">Length</md-subheader>
+    </md-list-item>
+    <md-divider></md-divider>
+
+
+<md-list ng-show="$ctrl.songs.length">
+  <md-virtual-repeat-container style="height: 300px">
+  <md-list-item  class="repeated-item" flex="" ng-repeat="song in $ctrl.songs | orderBy: $ctrl.orderProperty track by $index ">
+
+    <md-list-item class="zt" flex="25">{{ song.title }}</md-list-item>
+    <md-list-item class="zt" flex="25">{{ song.artist }}</md-list-item>
+    <md-list-item class="zt" flex="25">{{ song.duration | secondsToMinutes }}</md-list-item>
+      <button ng-click="$ctrl.playSong(song)">Play</button><button ng-click="$ctrl.removeSongFromPlaylist(song)">X</button>
+
+    <md-divider flex></md-divider>
+  </md-list-item>
+</md-list>
+</md-virtual-repeat-container>
 
 <div ng-show="$ctrl.songs.length == 0"> Playlist Empty! </div>
-
-<div><button ng-click="$ctrl.setOrderProperty('title')">title</button>
-  <button ng-click="$ctrl.setOrderProperty('artist')">artist</button>
-  <button ng-click="$ctrl.setOrderProperty('duration')">duration</button>
-  {{ $ctrl.orderProperty }}
-</div>
+</md-content>
 
 
-<ol ng-show="$ctrl.songs.length">
-  <li ng-repeat="song in $ctrl.songs | orderBy: $ctrl.orderProperty track by $index ">{{ song.title }} - {{ song.artist }} - {{ song.duration | secondsToMinutes }} <button ng-click="$ctrl.playSong(song)">Play</button><button ng-click="$ctrl.removeSongFromPlaylist(song)">X</button></li>
-</ol>
 
+<md-card>
+  <md-toolbar class="md-toolbar-sm">
+    <div class="text-center" class="md-toolbar-tools">
+      <h2 style="font-size: 24px;">last.fm</h2>
+    </div>
+    </md-toolbar>
 
-<div>
-<h2>Similar Tracks</h2>
+<md-list layout="column">
+  <md-virtual-repeat-container style="height: 250px">
+    <md-list-item md-virtual-repeat="track in $ctrl.similarTracks">
 
-<ol>
-  <li ng-repeat="track in $ctrl.similarTracks">
-    <img ng-src="{{track.image[1].#text}}"/> -
     {{track.artist.name}} - {{track.name}}
-  </li>
-</ol>
-
+    <md-divider></md-divider>
+  </md-list-item>
+  </md-virtual-repeat-container>
+  </md-list>
+  </md-card>
 
 </div>
