--- a/js/components/songUpload/songUpload.html
+++ b/js/components/songUpload/songUpload.html
@@ -1,4 +1,7 @@
 
+
+<md-button>Add a new Song</md-button>
+
 <input type="text" placeholder="Title" ng-model="$ctrl.song.title"><br>
 <input type="text" placeholder="Artist" ng-model="$ctrl.song.artist"><br>
 <input type="file" id="song-file-picker">
@@ -8,3 +11,4 @@
 
 
 <!-- put onFileInputChanged on $Scope to move to button on media player-->
+<!-- Add dialog -->
