--- a/js/templates/signin.html
+++ b/js/templates/signin.html
@@ -55,7 +55,7 @@
       <span class="md-headline">Sign Up</span>
     </md-toolbar>
 
-
+<md-content md-theme="docs-dark" layout-gt-sm="row" layout-padding>
     <form ng-submit="vm.submitSignUp();">
       <div class="form-group">
         <md-input-container>
@@ -89,7 +89,7 @@
 
     </form>
 
-
+</md-content>
 
     <p>
       <strong>
