update player controls, playlists, songs

--- a/js/components/playlistForm/playlistForm.html
+++ b/js/components/playlistForm/playlistForm.html
@@ -2,6 +2,7 @@
 
 <!-- Create Dialog -->
 
+<md-button ng-click="$ctrl.showAddPlaylistDialog($event)">Add Playlist</md-button>
 
 <br>
 <md-input-container>
