--- a/js/templates/playlists.html
+++ b/js/templates/playlists.html
@@ -19,5 +19,5 @@
   </md-list>
 
 </md-card>
+<playlist-form existing-playlists="playlists.playlists"></playlist-form>
 </div>
-  <playlist-form></playlist-form>
