--- a/js/components/playlistPlayer/playlistPlayer.html
+++ b/js/components/playlistPlayer/playlistPlayer.html
@@ -7,7 +7,9 @@
 <md-toolbar class="md-toolbar-sm" style="color: #333333; background:
 none;">
 
-<div ng-show="$ctrl.currentSong">
+
+
+<div style=height:45px;>
 <div> {{$ctrl.progress}} </div>
 <div>{{$ctrl.currentSong.artist}} - {{$ctrl.currentSong.title}} - {{$ctrl.currentSong.duration}}</div>
 </div>
@@ -20,9 +22,9 @@ none;">
 
 <md-button type="button" ng-click="$ctrl.skipBackward()"><md-icon md-font-icon="zmdi zmdi-fast-rewind"></md-icon></md-button>
 
-<md-button type="button" ng-click="$ctrl.playPause()"><md-icon md-font-icon="zmdi zmdi-play"></md-icon></md-button>
+<md-button ng-hide="$ctrl.isPlaying()" type="button" ng-click="$ctrl.playPause()"><md-icon md-font-icon="zmdi zmdi-play"></md-icon></md-button>
 
-<md-button type="button" ng-click="$ctrl.pause()"><md-icon md-font-icon="zmdi zmdi-pause"></md-icon></md-button>
+<md-button ng-show="$ctrl.isPlaying()" type="button" ng-click="$ctrl.pause()"><md-icon md-font-icon="zmdi zmdi-pause"></md-icon></md-button>
 
 <md-button type="button" ng-click="$ctrl.skipForward()"> <md-icon md-font-icon="zmdi zmdi-fast-forward"></md-icon></md-button>
 
@@ -50,7 +52,7 @@ none;">
 <md-list ng-show="$ctrl.songs.length">
   <md-virtual-repeat-container style="height: 300px">
   <md-list-item  class="repeated-item" flex="" ng-repeat="song in $ctrl.songs | orderBy: $ctrl.orderProperty track by $index ">
-
+    {{$index + 1 }}.
     <md-list-item class="zt" flex="25">{{ song.title }}</md-list-item>
     <md-list-item class="zt" flex="25">{{ song.artist }}</md-list-item>
     <md-list-item class="zt" flex="25">{{ song.duration | secondsToMinutes }}</md-list-item>
@@ -77,7 +79,7 @@ none;">
   <md-virtual-repeat-container style="height: 250px">
     <md-list-item md-virtual-repeat="track in $ctrl.similarTracks">
 
-    {{track.artist.name}} - {{track.name}}
+    <img ng-src="{{track.image[1]['#text']}}"><a target="_blank" href="{{track.url}}"> {{track.artist.name}} - {{track.name}}</a>
     <md-divider></md-divider>
   </md-list-item>
   </md-virtual-repeat-container>
