--- a/js/templates/signin.html
+++ b/js/templates/signin.html
@@ -1,5 +1,9 @@
 <div ng-controller="SignInController as vm">
+<div class="flexbox-parent">
 
+
+
+  <div layout="row" layout-align="center center"  style="min-height: 600px">
 <md-card>
 <div class="sign-in-form" ng-hide="vm.toggleValue">
   <md-toolbar class="md-hue-2">
@@ -99,4 +103,6 @@
     </p>
 
   </div>
+</div>
+</div>
 </div>
