--- a/js/components/playlistForm/playlistForm.html
+++ b/js/components/playlistForm/playlistForm.html
@@ -1,10 +1,10 @@
-<md-button class="md-primary md-raised" ng-click="showPrompt($event)">Create New Playlist</md-button>
+<!-- <md-button class="md-primary md-raised" ng-click="showPrompt($event)">Create New Playlist</md-button> -->
 
-<!-- Create Dialog -->
 
-<md-button ng-click="$ctrl.showAddPlaylistDialog($event)">Add Playlist</md-button>
 
-<br>
+<md-button class="md-primary md-raised" ng-click="$ctrl.showAddPlaylistDialog($event)">Add Playlist</md-button>
+
+<!-- <br>
 <md-input-container>
   <label>Title</label>
 <input type="text" ng-model="$ctrl.playlist.title">
@@ -19,4 +19,4 @@
 
    <br>
 
-<md-button type="button" name="Create" ng-click="$ctrl.createPlaylist()">Create Playlist</md-button>
+<md-button type="button" name="Create" ng-click="$ctrl.createPlaylist()">Create Playlist</md-button> -->
