--- a/js/components/addSongToPlaylistForm/addSongToPlaylistForm.html
+++ b/js/components/addSongToPlaylistForm/addSongToPlaylistForm.html
@@ -1,6 +1,6 @@
 
 
-  <md-card>
+  <md-card flex=30>
     <md-toolbar class="md-toolbar-sm">
       <div class="text-center" class="md-toolbar-tools">
         <h2 style="font-size: 24px;">Add Song To Playlist</h2>
