--- a/js/components/playlistPlayer/playlistPlayer.html
+++ b/js/components/playlistPlayer/playlistPlayer.html
@@ -1,5 +1,6 @@
 
 
+<md-card flex="40">
 <md-card>
 <div class="wavesurfer-container"></div>
 </md-card>
@@ -9,7 +10,7 @@ none;">
 
 
 
-<div style=height:45px;>
+<div>
 <div> {{$ctrl.progress}} </div>
 <div>{{$ctrl.currentSong.artist}} - {{$ctrl.currentSong.title}} - {{$ctrl.currentSong.duration}}</div>
 </div>
@@ -18,24 +19,24 @@ none;">
 
 <md-toolbar>
   <div class="md-toolbar-tools" layout="row">
-<md-button type="button" ng-click="$ctrl.prevSong()"><md-icon md-font-icon="zmdi zmdi-skip-previous"></md-icon></md-button>
+<md-button type="button" style="min-width: 49px" ng-click="$ctrl.prevSong()"><md-icon md-font-icon="zmdi zmdi-skip-previous"></md-icon></md-button>
 
-<md-button type="button" ng-click="$ctrl.skipBackward()"><md-icon md-font-icon="zmdi zmdi-fast-rewind"></md-icon></md-button>
+<md-button type="button" style="min-width: 49px" ng-click="$ctrl.skipBackward()"><md-icon md-font-icon="zmdi zmdi-fast-rewind"></md-icon></md-button>
 
-<md-button ng-hide="$ctrl.isPlaying()" type="button" ng-click="$ctrl.playPause()"><md-icon md-font-icon="zmdi zmdi-play"></md-icon></md-button>
+<md-button ng-hide="$ctrl.isPlaying()" type="button" style="min-width: 49px"  ng-click="$ctrl.playPause()"><md-icon md-font-icon="zmdi zmdi-play"></md-icon></md-button>
 
-<md-button ng-show="$ctrl.isPlaying()" type="button" ng-click="$ctrl.pause()"><md-icon md-font-icon="zmdi zmdi-pause"></md-icon></md-button>
+<md-button ng-show="$ctrl.isPlaying()" type="button" style="min-width: 49px"  ng-click="$ctrl.pause()"><md-icon md-font-icon="zmdi zmdi-pause"></md-icon></md-button>
 
-<md-button type="button" ng-click="$ctrl.skipForward()"> <md-icon md-font-icon="zmdi zmdi-fast-forward"></md-icon></md-button>
+<md-button type="button" style="min-width: 49px" ng-click="$ctrl.skipForward()"> <md-icon md-font-icon="zmdi zmdi-fast-forward"></md-icon></md-button>
 
-<md-button type="button" ng-click="$ctrl.nextSong()"><md-icon md-font-icon="zmdi zmdi-skip-next"></md-icon></md-button>
+<md-button type="button" style="min-width: 49px" ng-click="$ctrl.nextSong()"><md-icon md-font-icon="zmdi zmdi-skip-next"></md-icon></md-button>
 
-<md-button type="button" ng-click="$ctrl.toggleMute()"><md-icon md-font-icon="zmdi zmdi-volume-off"></md-icon></md-button>
+<md-button type="button" style="min-width: 49px" ng-click="$ctrl.toggleMute()"><md-icon md-font-icon="zmdi zmdi-volume-off"></md-icon></md-button>
 </div>
 </md-toolbar>
 
 
-<h4>{{$ctrl.playlist}}</h4>
+
 
 
 
@@ -52,7 +53,7 @@ none;">
 <md-list ng-show="$ctrl.songs.length">
   <md-virtual-repeat-container style="height: 300px">
   <md-list-item  class="repeated-item" flex="" ng-repeat="song in $ctrl.songs | orderBy: $ctrl.orderProperty track by $index ">
-    {{$index + 1 }}.
+  
     <md-list-item class="zt" flex="25">{{ song.title }}</md-list-item>
     <md-list-item class="zt" flex="25">{{ song.artist }}</md-list-item>
     <md-list-item class="zt" flex="25">{{ song.duration | secondsToMinutes }}</md-list-item>
@@ -62,13 +63,13 @@ none;">
   </md-list-item>
 </md-list>
 </md-virtual-repeat-container>
-
+</md-card>
 <div ng-show="$ctrl.songs.length == 0"> Playlist Empty! </div>
 </md-content>
+</div>
 
 
-
-<md-card>
+<md-card flex="30" layout-align="right">
   <md-toolbar class="md-toolbar-sm">
     <div class="text-center" class="md-toolbar-tools">
       <h2 style="font-size: 24px;">last.fm</h2>
