--- a/js/templates/signin.html
+++ b/js/templates/signin.html
@@ -3,7 +3,7 @@
 
 
 
-  <div layout="row" layout-align="center center"  style="min-height: 600px">
+  <div layout="row" layout-align="center center"  style="min-height: 600px;">
 <md-card>
 <div class="sign-in-form" ng-hide="vm.toggleValue">
   <md-toolbar class="md-hue-2">
