--- a/js/components/songUpload/songUpload.html
+++ b/js/components/songUpload/songUpload.html
@@ -1,11 +1,30 @@
 
 
-<md-button>Add a new Song</md-button>
+<md-toolbar class="md-toolbar-sm">
+  <div class="text-center" class="md-toolbar-tools">
+    <h2 style="font-size: 24px;">Upload A Song</h2>
+  </div>
+</md-toolbar>
 
 <input type="text" placeholder="Title" ng-model="$ctrl.song.title"><br>
 <input type="text" placeholder="Artist" ng-model="$ctrl.song.artist"><br>
-<input type="file" id="song-file-picker">
-<button ng-click="$ctrl.onFileInputChanged()">Upload</button>
+
+
+<div class="song-search">
+<label for="song-file-picker">
+    <md-icon md-font-icon="zmdi zmdi-search"></md-icon>
+  </label>
+
+<md-button type="button" style="min-width: 49px">
+
+      <input id="song-file-picker" type="file">
+
+    </md-button>
+</div>
+<!-- <input type="file" id="song-file-picker"> -->
+
+
+<md-button type="button" style="min-width: 49px" ng-click="$ctrl.onFileInputChanged()"><md-icon md-font-icon="zmdi zmdi-upload"></md-icon></md-button>
 <p id="status">Please select a file</p>
 
 
