--- a/js/components/addSongToPlaylistForm/addSongToPlaylistForm.html
+++ b/js/components/addSongToPlaylistForm/addSongToPlaylistForm.html
@@ -10,7 +10,7 @@
 
 <md-list layout="column">
   <md-virtual-repeat-container style="height: 250px">
-  <md-list-item md-virtual-repeat="song in $ctrl.songs" ng-click="$ctrl.addSongToPlaylist(song)"> {{song.title}} - {{song.artist}}
+  <md-list-item md-virtual-repeat="song in $ctrl.songs" ng-click="$ctrl.addSongToPlaylist(song)"> {{song.title}} - {{song.artist}}<md-icon md-font-icon="zmdi zmdi-plus-circle"></md-icon>
 <md-divider></md-divider>
 </md-list-item>
 </md-virtual-repeat-container>
