--- a/js/templates/playlists.html
+++ b/js/templates/playlists.html
@@ -10,9 +10,10 @@
   <md-list layout="column">
     <md-virtual-repeat-container style="height: 250px">
     <md-list-item md-virtual-repeat="playlist in playlists.playlists">
-      {{ playlist.title}} - <small>{{playlist.description}}</small>
-      <a ui-sref="playlist({ id : playlist._id})">View</a>
-      <md-button ng-click="playlists.deletePlaylist(playlist)">Delete</md-button>
+      <md-icon md-font-icon="zmdi zmdi-playlist-audio"></md-icon>
+    <a ui-sref="playlist({ id : playlist._id})">  {{ playlist.title}} - <small>{{playlist.description}}</small>
+      </a>
+      <md-button  type="button" style="min-width: 49px" ng-click="playlists.deletePlaylist(playlist)"><md-icon md-font-icon="zmdi zmdi-delete"></md-icon></md-button>
       <md-divider></md-divider>
     </md-list-item>
     </md-virutal-repeat-container>
