--- a/js/templates/songs.html
+++ b/js/templates/songs.html
@@ -1,6 +1,7 @@
 <div ng-controller="songsController as songs">
 
-  <md-card>
+<div style="padding-top: 10px">
+  <md-card style="width: 50%; margin: 0 auto;">
   <md-toolbar class="md-toolbar-sm">
     <div class="text-center" class="md-toolbar-tools">
       <h2 style="font-size: 24px;">Songs</h2>
@@ -21,4 +22,5 @@
 
   <song-upload existing-songs="songs.songList"></song-upload>
 </md-card>
+</div>
 </div>
