--- a/js/templates/addPlaylistDialog.html
+++ b/js/templates/addPlaylistDialog.html
@@ -1,5 +1,5 @@
 <md-dialog aria-label="List dialog">
-  <md-dialog-content>
+  <md-dialog-content style="padding-top: 50px">
     <md-input-container>
       <label>Title</label>
     <input type="text" ng-model="playlist.title">
