--- a/js/components/songUpload/songUpload.html
+++ b/js/components/songUpload/songUpload.html
@@ -15,7 +15,7 @@
 <!-- <input type="file" id="song-file-picker"> -->
 
 <div class="song-upload input-field inline">
-  <label for="song-file-picker" class="md-button md-ink-ripple">
+  <label for="song-file-picker" style="min-width: 49px" class="md-button md-ink-ripple">
       <md-icon md-font-icon="zmdi zmdi-search"></md-icon>
     <input class="" id="song-file-picker" type="file">
   </label>
@@ -26,7 +26,7 @@
   </md-button>
 </div>
 
-<p id="status">Please select a file</p>
+<p style="text-decoration: underline; padding-left: 10px" id="status">Please select a file</p>
 
 
 
